# final_project

./: .gitignore  2.32.5  Dockerfile  README.md  cleanup_legacy.py  db.sqlite3  docker-compose.yml  force_move.py  pyproject.toml  sync_linear.js
config/: settings.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
frontend/legacy/: react_index.html
frontend/legacy/login/: login.html
frontend/src/: App.jsx
frontend/src/components/: AIChatModal.jsx  BottomNav.jsx  FinancialChart.jsx
frontend/src/pages/: Board.jsx  Dashboard.jsx  Detail.jsx  ForgotPassword.jsx  Login.jsx  Main.jsx  MyPage.jsx  OCR.jsx  Schedule.jsx  Signup.jsx
main/: admin.py  models.py  ocr_service.py  r2.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/temp/: regex_llm.py
