[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["dayo98 <dayo98@naver.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.1.0"
djangorestframework = ">=3.16.0"
djangorestframework-simplejwt = ">=5.5.0"
python-dotenv = ">=1.2.1"
django-cors-headers = ">=4.9.0"
django-allauth = ">=65.14.1"
pyjwt = ">=2.11.0"
boto3 = ">=1.42.46"
firebase-admin = ">=7.2.0"
paddlenlp = "3.0.0b4"
transformers = ">=4.45.0"
tokenizers = ">=0.21.0"
pandas = ">=2.2.0"
numpy = "1.26.4"
openai = "2.24.0"
opencv-python-headless = "4.11.0.86"
pillow = ">=10.4.0"
einops = ">=0.7.0"
safetensors = ">=0.4.0"

# GPU 전용 라이브러리 설정
torch = { version = "2.6.0+cu124", source = "pytorch-gpu" }
torchvision = { version = "0.21.0+cu124", source = "pytorch-gpu" }
torchaudio = { version = "2.6.0+cu124", source = "pytorch-gpu" }

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"